# refractui

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
src/: input.rs  main.rs
src/app/: mod.rs  state.rs
src/config/: mod.rs
src/executor/: mod.rs
src/nvim/: mod.rs
src/profiles/: mod.rs
src/ui/: mod.rs
