[package]
name = "refractui"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "A terminal SQL IDE powered by dbt, with an embedded neovim editor"
authors = ["Michael Connell"]
license = "MIT"
repository = "https://github.com/MiConnell/refractui"
homepage = "https://github.com/MiConnell/refractui"
readme = "README.md"
keywords = ["dbt", "sql", "tui", "neovim", "database"]
categories = ["command-line-utilities", "database"]
exclude = ["/.github", "/CLAUDE.md", "/TODO.md", "/PLAN_EXPAND_MODE.md"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Neovim embedding
nvim-rs = { version = "0.9", features = ["use_tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config parsing
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "1"

# Async traits
async-trait = "0.1"

# Async compat
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

# Misc
dirs = "5"
sqlformat = "0.5.0"
arboard = "3.6.1"
chrono = "0.4.42"
rfd = "0.17.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
